[gd_scene load_steps=12 format=3 uid="uid://by6n514cuudl8"]

[ext_resource type="Texture2D" uid="uid://cg8yeb44fmwyx" path="res://textures/enemies/rockius/rockius3.png" id="1"]
[ext_resource type="Texture2D" uid="uid://c21x752cd0hax" path="res://textures/enemies/rockius/rockius2.png" id="2"]
[ext_resource type="Script" path="res://scripts/enemies/Rockius.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://ci4x2sin5ekr" path="res://textures/enemies/rockius/rockius1.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bgfht1wwsrhc6" path="res://textures/enemies/seen.png" id="9"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1")
}],
"loop": true,
"name": &"Chasing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"Seen",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(10, 10)

[sub_resource type="CircleShape2D" id="3"]
radius = 6.0

[sub_resource type="Animation" id="Animation_15364"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Seen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}

[sub_resource type="Animation" id="Animation_uurjq"]
resource_name = "seen"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Seen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"Seen", &"Chasing"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ddy4c"]
_data = {
"RESET": SubResource("Animation_15364"),
"seen": SubResource("Animation_uurjq")
}

[node name="Rockius" type="CharacterBody2D" groups=["enemy"]]
z_index = 1
collision_layer = 8
script = ExtResource("3")
bluesDropRange = [3, 10]
type = "rockius"

[node name="Body" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("1")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("4")

[node name="Seen" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -7)
texture = ExtResource("9")

[node name="seeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(0, 3)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -3)
shape = SubResource("3")

[node name="HurtTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ddy4c")
}

[connection signal="timeout" from="seeTimer" to="." method="_on_seeTimer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_HitBox_body_exited"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
